[package]
name = "timer-lab"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
# Pastikan ada "sha1_smol" di sini!
tokio-websockets = { version = "0.10", features = ["server", "client", "fastrand", "sha1_smol"] }
futures-util = { version = "0.3", features = ["sink"] }
http = "1"
futures = "0.3.32"

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = ["sink", "std"] }
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "HtmlInputElement",
    "InputEvent",
    "SubmitEvent",
] }
yew = { version = "0.21", features = ["csr"] }
